Fix word wrapping in IE
IE doesn’t like “break-word” as a value for the word-break property. It likes “break-all”, but that isn’t the behavior we want. word-wrap is
supported, and does what we want.

--- a/app/assets/stylesheets/screens/flow_manager.css.scss
+++ b/app/assets/stylesheets/screens/flow_manager.css.scss
@@ -14,7 +14,7 @@
   margin: 10px;
   color: black;
   font-family: $tahi-article-font-family;
-  word-break: break-word;
+  word-wrap: break-word;
   font-size: 14px;
   line-height: 17px;
 }
